--- a/tmdbandroid/app/src/main/res/values/strings.xml
+++ b/tmdbandroid/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
-    <string name="app_name">tmdbandroid</string>
+    <string name="app_name">TmDbAndroid</string>
     <string name="hello_home_fragment">Home Fragment</string>
     <string name="hello_search_fragment">Search fragment</string>
     <string name="hello_example_activity">Example Activity</string>
     <string name="go_to_search">Go to -> Search</string>
     <string name="go_to_example">Go to -> Example</string>
+    <string name="state_loading">Loading</string>
+
+    <!--  Error Message  -->
+    <string name="error_not_found">404 not found</string>
+    <string name="error_server">503 server error</string>
+    <string name="error_unknown">Unknown error</string>
 </resources>
